--- a/product_page/pro_page.css
+++ b/product_page/pro_page.css
@@ -2,6 +2,7 @@ body{
     margin-top: 20px;
     background-color: rgb(225,229,238);
     font-family: 'Acumin Pro', sans-serif;
+    font-weight: 400;
 }
 
 #all {
