--- a/style/payments.css
+++ b/style/payments.css
@@ -137,7 +137,10 @@ body {
 }
  h3{
 text-align: right;
-padding-right:3% ;
+padding-right:15% ;
+}
+h2{
+  margin-left: 19%;
 }
   
 .credit-card-box {
@@ -149,9 +152,12 @@ padding-right:3% ;
 .credit-card-box input {
   width: 100%;
   padding: 5px;
-  margin-bottom: 5px;
-  
+  margin-bottom: 7px;
+  border-radius: 7px; 
+  border: 1px solid #ccc; 
+
 }
+
 .credit-card-large-box {
   display: flex;
   flex-direction: column;
@@ -167,3 +173,8 @@ padding-right:3% ;
   align-items: center; /* Center horizontally */
 }
 
+#payment-right{
+  text-align: right;
+  color: #9c9b9b;
+  text-decoration: underline;
+}
