--- a/style/payments.css
+++ b/style/payments.css
@@ -66,7 +66,6 @@ body {
   border-radius: 5px;
   margin-bottom: 10px;
 }
-
 .circle-icon {
   display: flex;
   align-items: center;
@@ -76,6 +75,7 @@ body {
   border-radius: 50%;
   background-color: #ccc;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .check-icon {
@@ -85,7 +85,16 @@ body {
   background-color: #fff;
   border: 2px solid #000;
   border-radius: 50%;
+  transition: background-color 0.3s ease;
 }
+
+.circle-icon.clicked .check-icon {
+  background-color: #000;
+}
+
+
+
+
 
 .box-text {
   display: flex;
@@ -177,4 +186,9 @@ h2{
   text-align: right;
   color: #9c9b9b;
   text-decoration: underline;
+}
+footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #f7f7f7;
 }
