--- a/login.css
+++ b/login.css
@@ -54,10 +54,14 @@ color: black;
 button:hover{
     border: 1px dotted black;
   }
-  #parent {
+
+
+
+#parent {
     display: flex;
     justify-content: space-between;
-   
+    border-top: 2px solid black;  
+    padding-top: 30px;
 }
 
 #divleft {
@@ -87,13 +91,16 @@ button:hover{
     display: flex;
     justify-content: space-between;
     margin: 10px 10px 10px 10px ;
+    color: gray;
 }
+
 
 #footer-bottom1 {
     display: flex;
     justify-content: space-between;
     width: 40%;
     flex-wrap: wrap;
+    color: gray;
 }
 #footer-bottom2{
     margin-right: 30%;
