--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@ body {
     padding-left: 20px;
     padding-top: 1px;
     align-items: center;
+
 }
 
 .nav1>p {
@@ -37,6 +38,9 @@ body {
     align-items: center;
     width: 98%;
     margin: auto;
+    position: sticky;
+    top: 0;
+    background: white;
 }
 
 .nav2>div+div {
